:pencil: Added Home Responsiveness

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <nav class="nav-container">
             <a href="#home" class="nav-logo">Doctor<br><b>Care</b></a>
 
@@ -41,13 +41,9 @@
                     <i class="fa-solid fa-comment-dots nav-link-icon"></i>
                 </a>
             </div>
-
-            <div class="nav-contact">
-                <a href="#contact" class="scheduling-link">
-                    <i class="fa-solid fa-calendar-day"></i>
-                </a>
-            </div>
         </nav>
+    </header>
+    <main>
         <section id="home">
             <div class="wrapper wrapper-home">
                 <div class="home-informations">
