:pencil: Added Contact and Footer and their Responsiveness

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                         proporcionar uma
                         cura a longo prazo.
                     </p>
-                    <a href="#contact" class="home-link" id="home-link">
-                        <i class="fa-brands fa-whatsapp home-link-icon"></i>
-                        AGENDE SUA CONSULTA
+                    <a href="#contact" class="whatsapp-link" id="home-link">
+                        <i class="fa-brands fa-whatsapp whatsapp-link-icon"></i>
+                        <span>AGENDE SUA CONSULTA</span>
                     </a>
                 </div>
                 <div class="home-img-div">
@@ -198,8 +198,39 @@
             </div>
         </section>
         <section id="contact">
-            a
+            <div class="contact-informations">
+                <h1 class="section-subtitle">Entre em contato<br>com a gente!</h1>
+                <div class="contact-information">
+                    <div>
+                        <i class="fa-solid fa-location-dot contact-information-icon"></i>
+                        <a href="https://goo.gl/maps/BW58S28pqYVpJN4NA">Avenida Aricanduva, 8256</a>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-envelope contact-information-icon"></i>
+                        <a href="mailto:gunascsouza@gmail.com">gunascsouza@gmail.com</a>
+                    </div>
+                </div>
+
+                <a href="https://wa.me/5511976495898" class="whatsapp-link">
+                    <i class="fa-brands fa-whatsapp whatsapp-link-icon"></i>
+                    <span>AGENDE SUA CONSULTA</span>
+                </a>
+            </div>
+            <img src="./assets/images/homem-negro-com-moletom-bege-mexendo-no-celular.png"
+                alt="Homem Negro com Moleton Bege mexendo em Celular" class="contact-img">
         </section>
+        <footer>
+            <div class="footer-informations">
+                <p class="footer-logo">Doctor<b>Care</b></p>
+                <p>&copy; 2022 - DoctorCare & Gustavo Nascimento</p>
+                <p>Todos os direitos reservados</p>
+            </div>
+            <div class="footer-links">
+                <i class="fa-brands fa-github footer-link"></i>
+                <i class="fa-brands fa-instagram footer-link"></i>
+                <i class="fa-brands fa-facebook-square footer-link"></i>
+            </div>
+        </footer>
     </main>
 
     <!-- SCROLL REVEAL -->
