:pencil: Added '.github', Modify README.md & Try to solve IOS problem...

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 </div>
                 <div class="home-img-div">
                     <img src="./assets/images/mulher-negra-com-moleton-verde-com-as-duas-maos-no-peito.png"
-                        alt="Mulher Negra com Moletom Verde e com as duas mãos no peito" class="section-img"
-                        id="home-img">
+                        alt="Mulher Negra com Moletom Verde e com as duas mãos no peito" class="home-img" id="home-img">
                 </div>
             </div>
             <div class="home-stats" id="home-stats">
@@ -141,7 +140,7 @@
             <div class="wrapper wrapper-section" id="wrapper-about">
                 <div class="about-img-div">
                     <img src="./assets/images/doutor-feliz-segurando-prancheta-com-pacientes.png"
-                        alt="Doutor feliz segurando prancheta com pacientes" class="about-img">
+                        alt="Doutor feliz segurando prancheta com pacientes" class="section-img">
                 </div>
                 <div class="section-informations" id="about-informations">
                     <h5 class="section-title" id="services-title">SOBRE NÓS</h5>
@@ -159,7 +158,7 @@
             <div class="professionals-informations">
                 <div class="professionals-information">
                     <img src="./assets/images/doutor-clinico-geral-com-fundo-de-hospital.jpg"
-                        alt="Doutor Clínico Geral em Sala de Hospital" class="professional-information-img">
+                        alt="Doutor Clínico Geral em Sala de Hospital" class="professionals-information-img">
                     <div class="professionals-information-text">
                         <h3 class="professionals-title">Clínico Geral</h3>
                         <p class="professionals-description">
@@ -172,7 +171,7 @@
                 </div>
                 <div class="professionals-information">
                     <img src="./assets/images/doutora-pediatra-brincando-com-crianca.jpg"
-                        alt="Doutor Clínico Geral em Sala de Hospital" class="professional-information-img">
+                        alt="Doutor Clínico Geral em Sala de Hospital" class="professionals-information-img">
                     <div class="professionals-information-text">
                         <h3 class="professionals-title">Pediatria</h3>
                         <p class="professionals-description">
@@ -185,7 +184,7 @@
                 </div>
                 <div class="professionals-information">
                     <img src="./assets/images/doutor-negro-geriatra-cuidando-de-paciente-idoso.jpg"
-                        alt="Doutor Clínico Geral em Sala de Hospital" class="professional-information-img">
+                        alt="Doutor Clínico Geral em Sala de Hospital" class="professionals-information-img">
                     <div class="professionals-information-text">
                         <h3 class="professionals-title">Geriatria</h3>
                         <p class="professionals-description">
@@ -217,7 +216,7 @@
                 </a>
             </div>
             <img src="./assets/images/homem-negro-com-moletom-bege-mexendo-no-celular.png"
-                alt="Homem Negro com Moleton Bege mexendo em Celular" class="contact-img">
+                alt="Homem Negro com Moleton Bege mexendo em Celular" class="section-img">
         </section>
         <footer>
             <div class="footer-informations">
@@ -226,9 +225,15 @@
                 <p>Todos os direitos reservados</p>
             </div>
             <div class="footer-links">
-                <i class="fa-brands fa-github footer-link"></i>
-                <i class="fa-brands fa-instagram footer-link"></i>
-                <i class="fa-brands fa-facebook-square footer-link"></i>
+                <a href="https://github.com/Gustavo-Nasc" target="_blank">
+                    <i class="fa-brands fa-github footer-link"></i>
+                </a>
+                <a href="https://www.instagram.com/gustanascsouza/" target="_blank">
+                    <i class="fa-brands fa-instagram footer-link"></i>
+                </a>
+                <a href="https://www.facebook.com/gustanascsouza/" target="_blank">
+                    <i class="fa-brands fa-facebook-square footer-link"></i>
+                </a>
             </div>
         </footer>
     </main>
@@ -236,6 +241,7 @@
     <!-- SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./assets/js/scrollreveal.js"></script>
+    <script src="./assets/js/scrollEvent.js"></script>
 
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/cddd7554c0.js" crossorigin="anonymous"></script>
